# wastrumentation

./: .gitmodules  .pre-commit-config.yaml  CITATION.cff  Cargo.toml  LICENSE  README.md  add_two.wasm  add_two.wat  add_two_instrumented.wasm  add_two_instrumented.wat  example.wasp  hardcoded.sh  instrument.sh  local_README.md  merged.wasm
analysis-memoization-evaluation/input-analyses/pure-functions-memoization/: Cargo.toml
analysis-memoization-evaluation/input-analyses/pure-functions-memoization/src/: lib.rs
assemblyscript-compiler/: Cargo.toml
benchmarking-node/input-analyses/rust/coverage-instruction/: Cargo.toml
benchmarking-node/input-analyses/rust/icount/: Cargo.toml
benchmarking-node/input-analyses/rust/memory-tracing/: Cargo.toml
benchmarking-node/input-analyses/rust/opcodes/: Cargo.toml
cli/: Cargo.toml
cli/src/: main.rs
integration-tests/: Cargo.toml
integration-tests/tests/: execution_bench.rs  test-configurations.json  test_conf.rs
integration-tests/tests/analysis/: forward.wasp  set_arg_ret_to_zero.wasp  signatures_check.wasp
integration-tests/tests/input-programs/assemblyscript/: add-three.ts  controlflow-recursive.ts  simply_return.ts
integration-tests/tests/input-programs/wat/: add_three.wat
integration-tests/tests/wat/: different_signatures.wat
patch-wasi-start-exports/: Cargo.toml
patch-wasi-start-exports/src/: cli.rs  lib.rs  main.rs
rust-to-wasm-compiler/: Cargo.toml
rust-to-wasm-compiler/src/: error.rs  lib.rs
rust-to-wasm-compiler/tests/: compiles_to_wasm.rs
rust-to-wasm-compiler/tests/recursion-rs/: Cargo.toml
rust-to-wasm-compiler/tests/recursion-rs-minimal/: Cargo.toml
rust-to-wasm-compiler/tests/recursion-rs-minimal/src/: lib.rs
rust-to-wasm-compiler/tests/recursion-rs/src/: lib.rs
supported-languages/assemblyscript/: Cargo.toml
supported-languages/assemblyscript/src/: lib.rs
supported-languages/assemblyscript/src/compile/: compiler.rs  mod.rs
supported-languages/assemblyscript/src/generate/: mod.rs
supported-languages/common-language-tests/: Cargo.toml
supported-languages/common-language-tests/tests/: lib.rs  wasmtime_macros.rs
supported-languages/rust/: Cargo.toml
supported-languages/rust/src/compile/: compiler.rs  mod.rs  options.rs
wasp-compiler/: Cargo.toml  wasp.pest
wasp-compiler/src/: advice_ast.rs  assemblyscript_ast.rs  error.rs  joinpoints.rs  lib.rs  std_instrumentation_lib.ts  util.rs  wasp_ast.rs  wasp_interface.rs
wasp-compiler/src/ast/: assemblyscript.rs  mod.rs  pest.rs  wasp.rs
wasp-compiler/src/ast/assemblyscript/: mod.rs  std_analysis_lib_gen_apply.ts  std_analysis_lib_if.ts  std_analysis_lib_if_then_else.ts
wasp-compiler/src/ast/pest/: mod.rs  test-empty.wasp-test  test-global-only.wasp-test  test-trap-applies.wasp-test  test-trap-apply-hook.wasp-test  test-trap-apply-spe-inter.wasp-test  test-trap-apply-spe-intro.wasp-test  test-trap-br-if.wasp-test  test-trap-br-table.wasp-test  test-trap-call-hook.wasp-test  test-trap-if-then-else.wasp-test  test-trap-select.wasp-test
wastrumentation/: Cargo.toml
wastrumentation-instr-lib/: Cargo.toml
wastrumentation-instr-lib/src/: debug_lib_boilerplate.ts  lib.rs  lib_boilerplate.ts  wasm_constructs.rs
wastrumentation-instr-lib/src/analysis_gen_assemblyscript/: mod.rs  std_analysis_lib_call.ts  std_analysis_lib_gen_apply.ts
wastrumentation-instr-lib/src/lib_compile/: mod.rs
wastrumentation-instr-lib/src/lib_compile/assemblyscript/: compiler.rs  mod.rs  options.rs
wastrumentation-instr-lib/src/lib_compile/rust/: compiler.rs  options.rs
wastrumentation-instr-lib/src/lib_gen/instrumentation/: mod.rs
wastrumentation-instr-lib/src/std_lib_compile/: mod.rs
wastrumentation-instr-lib/src/std_lib_compile/assemblyscript/: compilation.rs  compilation_result.rs  compiler.rs  compiler_options.rs  mod.rs
wastrumentation-instr-lib/src/std_lib_compile/rust/: mod.rs
wastrumentation-instr-lib/src/std_lib_gen/assemblyscript/: debug_lib_boilerplate.ts  minimal_lib.ts  mod.rs
wastrumentation-instr-lib/src/std_lib_gen/rust/: default_manifest_source.toml  mod.rs
wastrumentation-instr-lib/tests/: denan.rs  execution_bench.rs  expected_lib.ts  guiicons-memory-tracing.rs  instruction-mix.rs  integration_test.rs  integration_tests.rs  integration_util.rs  logging_analysis.rs  memoization_analysis.rs  memoization_test_wasmr3.rs  memory_introspection.rs  pacalc-forward.rs  safe-heap.rs  shadow_execution.rs  shadow_execution_with_linking.rs  test-configurations.json  wasmtime_macros.rs  wastrumentation.rs
wastrumentation-instr-lib/tests/analyses/rust/: denan  instruction-mix  memory-tracing  pure-functions-memoization  safe-heap
wastrumentation-instr-lib/tests/analyses/wasp-as/: block.wasp  br-table-alter.wasp  call_chain_after.wasp  call_chain_post.wasp  call_chain_pre.wasp  call_chain_pre_post.wasp  call_indirect.wasp  call_stack.wasp  forward.wasp  if-then-alter.wasp  loop.wasp  signatures_check.wasp
wastrumentation-instr-lib/tests/test_conf/: mod.rs
wastrumentation-static-analysis/: Cargo.toml
wastrumentation-static-analysis/src/: lib.rs  main.rs
wastrumentation/src/: error.rs  lib.rs  stack_library.rs
wastrumentation/src/analysis/: assemblyscript.rs  mod.rs  rust.rs
wastrumentation/src/compiler/: mod.rs
wastrumentation/src/instrument/: block_loop.rs  branch_if.rs  function_application.rs  function_call.rs  function_call_indirect.rs  memory.rs  mod.rs  simple_operations.rs
wastrumentation/src/parse_nesting/: high_level_body.rs  mod.rs  typed_high_level_body.rs  typed_high_level_body_error.rs  typed_indexed_instr.rs
wastrumentation/src/wasm_constructs/: mod.rs
wastrumentation/tests/: execution_bench.rs  test-configurations.json  test_call_indirect.rs  test_conf.rs  wastrumentation.rs
wastrumentation/tests/analysis/: br-table-alter.wasp  branch-if-alter.wasp  call_chain_after.wasp  call_chain_before.wasp  call_chain_before_after.wasp  call_indirect.wasp  call_stack.wasp  empty.wasp  forward.wasp  if-then-alter.wasp  if-then-else-alter.wasp  loop.wasp
wastrumentation/tests/test_conf/: mod.rs
(+264 files in other folders)
