[workspace]

resolver = "2"
members = [
    "wastrumentation",
    "wastrumentation-instr-lib",
    "wasp-compiler",
    "wasm-merge",
    "rust-to-wasm-compiler",
    "cli",
    "wastrumentation-static-analysis",
]

[workspace.dependencies]
# Crates defined in this project
asc-compiler-rs = { git = "https://github.com/aaronmunsters/asc-compiler-rs", rev = "779738e" }
rust-to-wasm-compiler = { path = "./rust-to-wasm-compiler" }
wastrumentation = { path = "./wastrumentation" }
wastrumentation-instr-lib = { path = "./wastrumentation-instr-lib" }
wasp-compiler = { path = "./wasp-compiler" }
wasm-merge = { path = "./wasm-merge" }

wasmtime = "29.0"
indoc = "2"
tempfile = "3.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wat = "1"
rayon = "1.10"
thiserror = "2"
