[workspace]

resolver = "2"
members = [
    "wastrumentation",
    "wastrumentation-instr-lib",
    "wasp-compiler",
    "wasm-merge",
    "cli",
    "wastrumentation-static-analysis",
]

[workspace.dependencies]
# Crates defined as part of Wastrumentation
asc-compiler-rs = { git = "https://github.com/aaronmunsters/asc-compiler-rs", rev = "779738e" }
rust-to-wasm-compiler = { git = "https://github.com/aaronmunsters/rust-to-wasm-compiler", rev = "7026c54" }
wastrumentation = { path = "./wastrumentation" }
wastrumentation-instr-lib = { path = "./wastrumentation-instr-lib" }
wasp-compiler = { path = "./wasp-compiler" }
wasm-merge = { path = "./wasm-merge" }

wasmtime = "35.0"
indoc = "2"
tempfile = "3.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wat = "1"
rayon = "1.10"
thiserror = "2"
