[workspace]

resolver = "2"
members = [
    "wastrumentation",
    "wastrumentation-instr-lib",
    "wasp-compiler",
    "wasm-merge",
    "cli",
    "wastrumentation-static-analysis",
    "supported-languages/*",
]

[workspace.dependencies]
# Crates defined as part of Wastrumentation
asc-compiler-rs = { git = "https://github.com/aaronmunsters/asc-compiler-rs", rev = "779738e" }
rust-to-wasm-compiler = { git = "https://github.com/aaronmunsters/rust-to-wasm-compiler", rev = "7026c54" }
wastrumentation = { path = "./wastrumentation" }
wasp-compiler = { path = "./wasp-compiler" }
wasm-merge = { path = "./wasm-merge" }
wastrumentation-lang-rust = { path = "./supported-languages/rust" }
wastrumentation-lang-assemblyscript = { path = "./supported-languages/assemblyscript" }

wasmtime = "37.0"
indoc = "2"
tempfile = "3.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wat = "1"
rayon = "1.11"
thiserror = "2"
