[package]
name = "wastrumentation-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
clio = { version = "0.3.5", features = ["clap-parse"] }
wastrumentation = { path = "../wastrumentation" }
serde = { version = "1.0", features = ["derive"] }
