[package]
name = "wastrumentation-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clio = { version = "0.3.5", features = ["clap-parse"] }
wastrumentation = { workspace = true }
wastrumentation-instr-lib = { workspace = true }
rust-to-wasm-compiler = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
assemblyscript-compiler = { workspace = true }
