[package]
name = "execution-bench"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasmer = "4.2"
wastrumentation = { path = "../wastrumentation" }
wasi-common = "16.0"
wasmtime = "16.0"
wasmtime-wasi = "16.0"
wastrumentation-instr-lib = { path = "../wastrumentation-instr-lib" }
