[package]
name = "patch-wasi-start-exports"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasabi_wasm = { git = "https://github.com/aaronmunsters/wasabi.git", branch = "candidate" }
clap = { version = "4.4.8", features = ["derive", "string"] }
anyhow = "1.0.75"
