[package]
name = "rust-to-wasm-compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
cargo = "0.82.0"
anyhow = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
wat = { workspace = true }
wasmtime = { workspace = true }
wastrumentation = { path = "../wastrumentation" }
wastrumentation-instr-lib = { path = "../wastrumentation-instr-lib" }
rayon = { workspace = true }
indoc = { workspace = true }
