[package]
name = "rust-to-wasm-compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
cargo = "0.87.0"
thiserror = { workspace = true }
tempfile = { workspace = true }
dirs = "6.0"
sha256 = "1.5.0"

[dev-dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
wat = { workspace = true }
wasmtime = { workspace = true }
wastrumentation = { workspace = true }
wastrumentation-instr-lib = { workspace = true }
rayon = { workspace = true }
indoc = { workspace = true }
