[package]
name = "wasp-compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
indoc = { workspace = true }
from-pest = "0.3.2"
num-integer = "0.1"
pest = "2.7"
pest-ast = "0.3.4"
pest_derive = "2.7"

[dev-dependencies]
pest-test = "0.1.6"
