[package]
name = "wasp-compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = { workspace = true }
indoc = { workspace = true }
from-pest = "0.3.3"
pest = "2.7"
pest-ast = "0.3.5"
pest_derive = "2.7"

[dev-dependencies]
pest-test = "0.1.6"
