[package]
name = "wasp-compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = { workspace = true }
indoc = { workspace = true }
from-pest = "0.3.4"
pest = "2.8"
pest-ast = "0.3.6"
pest_derive = "2.8"

[dev-dependencies]
pest-test = "0.1.6"
