[package]
name = "wastrumentation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasabi_wasm = { git = "https://github.com/aaronmunsters/wasabi.git", branch = "candidate" }
wasm-merge = { workspace = true }
anyhow = { workspace = true }
indoc = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
wat = { workspace = true }
wasmtime = { workspace = true }
wastrumentation = { workspace = true }
rayon = { workspace = true }
wastrumentation-instr-lib = { workspace = true }
serde = { workspace = true }
