[package]
name = "wastrumentation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasabi_wasm = { git = "https://github.com/aaronmunsters/wasabi.git", branch = "candidate" }
wasm-merge = { workspace = true }
anyhow = { workspace = true }
indoc = { workspace = true }

[dev-dependencies]
wasmtime = { workspace = true }
wastrumentation = { workspace = true }
wastrumentation-instr-lib = { workspace = true }
assemblyscript-compiler = { workspace = true }
wat = { workspace = true }
