[package]
name = "wastrumentation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasabi_wasm = { git = "https://github.com/aaronmunsters/wasabi.git", rev = "363cf7d" }
wasm-merge = { workspace = true }
indoc = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
wasmtime = { workspace = true }
wastrumentation = { workspace = true }
asc-compiler-rs = { workspace = true }
wat = { workspace = true }
