[package]
name = "rust-wasp-call-stack"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wee_alloc = "0.4.5"
wastrumentation-rs-stdlib = { path = "../wastrumentation-rs-stdlib-with-std" }
lazy_static = "1.5.0"
ordered-float = "4.2.2"

[profile.release]
strip = true
lto = true
panic = "abort"

[workspace]
