[package]
name = "rust-memory-tracing-analysis"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wee_alloc = "0.4.5"
wastrumentation-rs-stdlib = { path = "../wastrumentation-rs-stdlib" }
circular-buffer = { version = "0.1.9", default-features = false }

[profile.release]
strip = true
lto = true
panic = "abort"

[workspace]
