[package]
name = "rust-instruction-opcodes"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wee_alloc = "0.4.5"
wastrumentation-rs-stdlib = { path = "../wastrumentation-rs-stdlib" }
strum = { version = "0.26", default-features = false, features = ["derive"] }

[profile.release]
strip = true
lto = true
panic = "abort"

[workspace]
